# ThymeSeries

./: ThymeSeries.cabal
src/: Main.hs
src/Data/: Division.hs  Record.hs  Series.hs
