name:                ThymeSeries
version:             0.1.0.0
synopsis:            A series for time based transactions

-- A longer description of the package.
-- description:         

license:             Apache-2.0
license-file:        LICENSE
author:              Yaakov M Nemoy
maintainer:          hello@yaakovnemoy.com

-- A copyright notice.
-- copyright:           

category:            Math
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10
executable ThymeSeries
  main-is: Main.hs
   
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8,
                       time >= 1.5,
                       comonad,
                       -- comonad-extras, -- want the pointer comonad but does not compile on 7.8
                       array,
                       utility-ht,
                       hlint,
                       pretty-show
  default-language:    Haskell2010
  hs-source-dirs: src
